--- a/css/styles.css
+++ b/css/styles.css
@@ -472,6 +472,7 @@ body {
   flex-direction: column;
 }
 .modal-input-text {
+  display: block;
   margin-bottom: 4px;
   font-size: 12px;
   line-height: 1.17;
@@ -480,7 +481,6 @@ body {
 }
 .modal-input {
   padding: 12px 42px;
-  margin-bottom: 10px;
   width: 100%;
   height: 40px;
   border: 1px solid var(--modal-input-border-color);
@@ -489,9 +489,12 @@ body {
 
   transition: border-color 250ms var(--timing-function);
 }
-.modal-textarea {
-  padding: 12px 16px;
+.modal-label-textarea {
   margin-bottom: 20px;
+}
+.modal-textarea {
+  display: block;
+  padding: 12px 16px;
   width: 100%;
   height: 120px;
 
@@ -510,6 +513,7 @@ body {
 }
 .modal-label {
   position: relative;
+  margin-bottom: 10px;
 
   transition: fill 250ms var(--timing-function);
 }
@@ -522,9 +526,8 @@ body {
 }
 .modal-icons {
   position: absolute;
-  bottom: 12px;
+  bottom: 11px;
   left: 12px;
-  transform: translateY(-50%);
 }
 .modal-label-checkbox {
   display: flex;
